# dzfoot-android

./: .gitignore  AR_EMULATOR.md  PLAN_DIRECTIONAL_ANIMATION.md  PLAN_EVENT_CONSUMPTION.md  PROJECT_CONTEXT.md  README.md  build.gradle  build_client.sh  generate_marker.py  proguard-rules.pro  settings.gradle
src/main/: AndroidManifest.xml
src/main/assets/: README.md  assets_catalog.json  ball.glb  goals.glb  pitch.glb  player_base.glb  stadium_minimal.glb  stadium_test.glb
src/main/assets/beta2/databases/default/: database.sqlite
src/main/assets/models/: models.txt
src/main/assets/modular/: modular_catalog.json
src/main/assets/modular/bodies/: body_average.glb  body_heavy.glb  body_muscular.glb  body_thin.glb
src/main/assets/modular/parts/: beard_full.glb  beard_none.glb  beard_short.glb  beard_stubble.glb  hair_bald.glb  hair_curly.glb  hair_long.glb  hair_mohawk.glb  hair_ponytail.glb  hair_short.glb
src/main/assets/sounds/: sounds.txt
src/main/cpp/: ARManager.cpp  ARManager.h  ARRenderer.cpp  ARRenderer.h  AnimationPlayer.cpp  AnimationPlayer.h  AssetLoader.cpp  AssetLoader.h  AudioManager.cpp  AudioManager.h  CMakeLists.txt  Camera.cpp  Camera.h  DeadReckoning.cpp  DeadReckoning.h  DirectionalAnimBank.cpp  DirectionalAnimBank.h  EntityInterpolator.cpp  EntityInterpolator.h  GLBLoader.cpp  GLBLoader.h  GameBridge.cpp  GameBridge.h  InputManager.cpp  InputManager.h  Mesh.cpp  Mesh.h  NetworkClient.cpp  NetworkClient.h  PredictionBuffer.cpp  PredictionBuffer.h  SceneGraph.cpp  SceneGraph.h  Shader.cpp  Shader.h  TouchController.cpp  TouchController.h  jni_main.cpp
src/main/cpp/protocol/: DZFootProtocol.h
src/main/cpp/tests/: test_protocol_layout.cpp
src/main/java/com/football/ar/: AudioSystem.kt  Config.kt  JniBridge.kt  LiveKitManager.kt  MainActivity.kt  MenuActivity.kt
src/main/java/com/football/ar/ui/components/: CommonComponents.kt
src/main/java/com/football/ar/ui/screens/: MainMenuScreen.kt  ModeSelectScreen.kt  TeamCompositionScreen.kt  TeamSelectScreen.kt  WaitingScreen.kt
src/main/java/com/football/ar/ui/theme/: Color.kt  Theme.kt  Type.kt
src/main/java/com/football/ar/ui/utils/: GameLauncher.kt
src/main/java/com/google/ar/core/: JniBridge.kt  SessionCreateJniHelper.java
src/main/res/values/: colors.xml  strings.xml  themes.xml
